RESOLVED FIXED169026
[Win] DRT should not dispatch messages after test is done.
https://bugs.webkit.org/show_bug.cgi?id=169026
Summary [Win] DRT should not dispatch messages after test is done.
Per Arne Vollan
Reported 2017-03-01 02:16:36 PST
Like on macOS, DRT on Windows should stop dispatching messages when test is done.
Attachments
Patch (1.38 KB, patch)
2017-03-01 02:29 PST, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-03-01 02:29:15 PST
Brent Fulgham
Comment 2 2017-03-01 10:01:55 PST
Comment on attachment 303056 [details] Patch Great catch! r=me.
Per Arne Vollan
Comment 3 2017-03-01 22:50:59 PST
Comment on attachment 303056 [details] Patch Thanks for reviewing!
WebKit Commit Bot
Comment 4 2017-03-01 23:19:08 PST
Comment on attachment 303056 [details] Patch Clearing flags on attachment: 303056 Committed r213270: <http://trac.webkit.org/changeset/213270>
WebKit Commit Bot
Comment 5 2017-03-01 23:19:13 PST
All reviewed patches have been landed. Closing bug.
Fujii Hironori
Comment 6 2021-01-11 12:13:45 PST
Hi, Per. What problem was fixed by this patch? This change causes the following bug. Bug 220450 – [Win][DumpRenderTree] ASSERT(!m_channel) failed in WebSocket::contextDestroyed
Per Arne Vollan
Comment 7 2021-01-12 04:07:15 PST
(In reply to Fujii Hironori from comment #6) > Hi, Per. > What problem was fixed by this patch? > This change causes the following bug. > > Bug 220450 – [Win][DumpRenderTree] ASSERT(!m_channel) failed in > WebSocket::contextDestroyed Hi! I believe this change was done in order to fix flakiness in the Windows test results.
Note You need to log in before you can comment on or make changes to this bug.