[Win] DRT should not dispatch messages after test is done. https://bugs.webkit.org/show_bug.cgi?id=169026

Reviewed by Brent Fulgham.

Exiting the message loop with PostQuitMessage will leave room for
a few messages to be dispatched after the test is done.

* DumpRenderTree/win/DumpRenderTree.cpp:
(dump):
(runTest):


Canonical link: https://commits.webkit.org/186065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213270 268f45cc-cd09-0410-ab3c-d52691b4dbfc